trunk/yanl/examples/t1/fail/identificator_global_duplicat.yanl
# Doi identificatori globali nu pot avea acelasi nume

program dude;
var a:integer;

function a(b:integer):integer
begin
  a:=b+1;
end;

begin
 writeinteger(a(20));
end.